HelloUltraviolet/Fixtures/RejectedSource/Expressions/NullLiteralExpected/Expected.uv
//! Expected diagnostic metadata for the NullLiteralExpected rejected-source specimen.

expectedDiagnostic("E-TYP-1530", "def.16.NullLiteralExpected")
